# journal-ai-auditor

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Journa-ai-auditor-requirements.md  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  start.bat  start.ps1  test_import.py  test_output.txt  test_output_2.txt
.claude/: settings.local.json
.claude/plans/: e2e-perf-realdata.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml  release.yml
backend/: .dockerignore  .env.example  Dockerfile  check_db.py  pyproject.toml  requirements.txt  test_azure_connection.py  test_pdf_font.py  test_risk_endpoint.py  trigger_analysis.py  verify_duckdb_singleton.py  verify_risk_data.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  analysis.py  base.py  documentation.py  investigation.py  orchestrator.py  qa.py  review.py  tools.py
backend/app/agents/autonomous/: __init__.py  agent.py  prompts.py  state.py  tool_registry.py
backend/app/agents/autonomous_tools/: __init__.py  account_balance.py  correlation_analysis.py  duplicate_detection.py  financial_ratios.py  journal_entry_testing.py  ml_anomaly_wrapper.py  population_analysis.py  round_amount.py  rule_risk_wrapper.py  sankey_data.py  stratification.py  t_account_analysis.py  time_series_analysis.py
backend/app/api/: __init__.py
backend/app/api/endpoints/: __init__.py  agents.py  analysis.py  audit.py  autonomous_audit.py  batch.py  dashboard.py  health.py  import_data.py  journals.py  llm_usage.py  reports.py  rules.py  settings.py
backend/app/core/: __init__.py  cache.py  config.py  exceptions.py  logging.py  middleware.py
backend/app/db/: __init__.py  duckdb.py  schema.py  sqlite.py
backend/app/models/: __init__.py  analysis.py  journal.py  master.py
backend/app/services/: __init__.py  aggregation.py  audit_service.py  batch.py  import_service.py  report_generator.py  validation_service.py
backend/app/services/llm/: __init__.py  cost_tracker.py  models.py  service.py
backend/app/services/rules/: __init__.py  account_rules.py  amount_rules.py  approval_rules.py  base.py  benford.py  description_rules.py  ml_detection.py  rule_engine.py  scoring.py  time_rules.py  trend_rules.py
backend/tests/: __init__.py  conftest.py  test_agent_report_integration.py  test_agent_tools.py  test_agents.py  test_aggregation.py  test_api_endpoints.py  test_api_integration.py  test_audit_service.py  test_autonomous_agent.py  test_autonomous_audit_api.py  test_batch_service.py  test_cache.py  test_cost_tracker.py  test_dashboard_filters.py  test_dashboard_metrics.py  test_data_verification.py  test_database.py  test_department_vendor_flow.py  test_e2e.py  test_exceptions.py  test_health.py  test_import_service.py  test_integration.py  test_integration_cloud.py  test_integration_ollama.py  test_integration_workflow.py  test_llm_service.py  test_middleware.py  test_models.py  test_performance.py  test_period_comparison.py  test_purpose_driven_reports.py  test_report_generator.py  test_rule_engine.py  test_rules.py  test_rules_api.py  test_scoring.py  test_sqlite.py  test_tool_registry.py  (+2 more)
docs/: 00_quickstart.md  01_system_architecture.md  02_module_design.md  03_database_design.md  04_api_design.md  05_development_plan.md  06_setup_guide.md  07_user_manual.md  08_api_quick_reference.md  09_user_guide_ja.md  10_cloud_setup_guide.md  11_enterprise_operations.md  12_enterprise_specification.md  13_demo_guide.md  14_cost_estimation.md  15_troubleshooting.md  16_deployment_runbook.md
frontend/: .dockerignore  .env.development  .env.example  .env.production  .eslintrc.json  .prettierrc.json  Dockerfile  eslint.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.electron.json  tsconfig.json  vite.config.ts
frontend/e2e/: analysis.spec.ts  dashboard.spec.ts  fixtures.ts  import.spec.ts  navigation.spec.ts  responsive.spec.ts  settings.spec.ts
frontend/src/main/: index.ts
frontend/src/preload/: index.ts
frontend/src/renderer/: App.tsx  index.css  main.tsx
frontend/src/renderer/__tests__/: AIAnalysisPage.test.tsx  AccountsPage.test.tsx  AnalyticsPage.test.tsx  App.test.tsx  AutonomousAuditPage.test.tsx  DashboardPage.test.tsx  ImportPage.test.tsx  Layout.test.tsx  ReportsPage.test.tsx  RiskPage.test.tsx  SearchPage.test.tsx  SettingsPage.test.tsx  TimeSeriesPage.test.tsx  setup.ts
frontend/src/renderer/components/: AdvancedFilterBar.tsx  DashboardFilterBar.tsx  ErrorBoundary.tsx  Layout.tsx
frontend/src/renderer/components/dashboard/: FinancialMetricsWidget.tsx  StatCard.tsx
frontend/src/renderer/components/layout-components/: Header.tsx  HelpPanel.tsx  NotificationPanel.tsx  Sidebar.tsx
frontend/src/renderer/components/onboarding/: Onboarding.tsx
frontend/src/renderer/components/settings/: RulesSection.tsx
frontend/src/renderer/lib/: api.ts  helpContent.ts  useFiscalYear.ts
frontend/src/renderer/pages/: AIAnalysisPage.tsx  AccountsPage.tsx  AnalyticsPage.tsx  AutonomousAuditPage.tsx  DashboardPage.tsx  ImportPage.tsx  ReportsPage.tsx  RiskPage.tsx  SearchPage.tsx  SettingsPage.tsx  TimeSeriesPage.tsx
infrastructure/: README.md
infrastructure/terraform/aws/: main.tf
infrastructure/terraform/azure/: main.tf
infrastructure/terraform/azure/demo/: main.tf
infrastructure/terraform/gcp/: main.tf
infrastructure/terraform/modules/vpc/: main.tf
sample_data/: 00_sample_data_spec.md  01_chart_of_accounts.csv  02_department_master.csv  03_vendor_master.csv  04_user_master.csv
sample_data/scripts/: config.yaml  generate_journals.py
scripts/: README.md  add_analysis_columns.py  backup_db.sh  demo.ps1  import_sample_data.py  init_full_schema.py  insert_sample_violations.py  load_sample_data.py  quick_setup.py  recreate_violations_table.py  restore_db.sh  run_batch_with_violations.py  run_tests.ps1  setup.ps1  setup_azure.ps1  start_all.ps1  start_backend.ps1  start_frontend.ps1  test_integration.ps1
(+5 files in other folders)
