[project]
name = "jaia-backend"
version = "0.1.0"
description = "Journal entry AI Analyzer - Backend API"
readme = "README.md"
license = { text = "Proprietary" }
requires-python = ">=3.11"
authors = [
    { name = "JAIA Team" }
]
keywords = ["audit", "journal-entry", "ai", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",

    # Database
    "duckdb>=1.1.0",
    "sqlalchemy>=2.0.36",

    # Data Processing
    "polars>=1.20.0",
    "pandas>=2.2.3",
    "pyarrow>=18.0.0",
    "numpy>=2.1.0",
    "openpyxl>=3.1.5",

    # ML / Analysis
    "scikit-learn>=1.6.0",

    # AI / LLM - Updated 2026-02
    "langchain>=1.2.9",
    "langchain-core>=1.2.9",
    "langgraph>=1.0.8",
    "langchain-anthropic>=1.3.2",
    "langchain-openai>=1.1.7",
    "langchain-aws>=1.2.2",
    "langchain-google-genai>=4.2.0",
    "langchain-google-vertexai>=3.2.2",
    "langchain-ollama>=0.3.0",
    "anthropic>=0.79.0",
    "openai>=2.17.0",
    "boto3>=1.42.0",  # AWS Bedrock
    "google-genai>=1.56.0",  # Google AI Studio
    "google-cloud-aiplatform>=1.136.0",  # Vertex AI

    # Report Generation
    "python-pptx>=1.0.2",
    "reportlab>=4.2.5",

    # Utilities
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "PyYAML>=6.0.1",
    "python-dateutil>=2.8.2",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",

    # Linting & Formatting
    "ruff>=0.8.0",
    "mypy>=1.13.0",

    # Type stubs
    "types-PyYAML>=6.0.12",
    "types-python-dateutil>=2.9.0",
    "pandas-stubs>=2.1.4",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG002", # unused method argument (common for **kwargs, overrides)
    "SIM105", # contextlib.suppress vs try/except/pass (readability)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG"]
"app/core/middleware.py" = ["ARG001"]  # exception handlers require request param
"app/main.py" = ["ARG001"]  # lifespan requires app param
"app/api/endpoints/*" = ["ARG001"]  # FastAPI dependency injection params

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "duckdb.*",
    "polars.*",
    "sklearn.*",
    "scipy.*",
    "langchain.*",
    "langgraph.*",
    "pptx.*",
    "reportlab.*",
]
ignore_missing_imports = true

# Pre-existing type errors - fix incrementally
[[tool.mypy.overrides]]
module = [
    "app.core.exceptions",
    "app.core.logging",
    "app.core.middleware",
    "app.db.duckdb",
    "app.main",
    "app.services.llm.service",
    "app.services.batch",
    "app.services.aggregation",
    "app.services.report_generator",
    "app.services.rules.benford",
    "app.services.rules.ml_detection",
    "app.services.rules.approval_rules",
    "app.services.rules.time_rules",
    "app.services.rules.account_rules",
    "app.services.rules.amount_rules",
    "app.services.rules.rule_engine",
    "app.api.endpoints.analysis",
    "app.api.endpoints.reports",
    "app.api.endpoints.import_data",
    "app.api.endpoints.health",
    "app.agents.base",
    "app.agents.tools",
    "app.agents.analysis",
    "app.agents.investigation",
    "app.agents.review",
    "app.agents.qa",
    "app.agents.documentation",
    "app.agents.orchestrator",
]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing --cov-fail-under=70"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "pass",
]
